// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for Deployment metrics  Ensure error state is rendred 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main filters"
    >
      <span
        class="bp3-icon bp3-icon-filter StyledProps--main"
        icon="filter"
      >
        <svg
          data-icon="filter"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            filter
          </desc>
          <path
            d="M13.99.99h-12a1.003 1.003 0 00-.71 1.71l4.71 4.71V14a1.003 1.003 0 001.71.71l2-2c.18-.18.29-.43.29-.71V7.41L14.7 2.7a1.003 1.003 0 00-.71-1.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="transaction_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                rbac.group: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="node_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.nodesLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="HealthSource_MultiSelect_DropDown"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.verification.healthSourceLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <label
        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
      >
        <input
          data-testid="anomalousFilterCheckbox"
          type="checkbox"
        />
        <span
          class="bp3-control-indicator"
        />
        pipeline.verification.anomalousMetricsFilterLabel
      </label>
    </div>
    <div
      class="Layout--horizontal StyledProps--main filterSecondRow StyledProps--border StyledProps--border-bottom"
    >
      <div
        class="StyledProps--font StyledProps--main accordionToggleButtons"
      />
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main legend"
        >
          <span
            class="predicted"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
             
            connectors.cdng.baseline
          </p>
          <span
            class="actualFail"
          />
          <span
            class="actualWarning"
          />
          <span
            class="actualObserve"
          />
          <span
            class="actualHealthy"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
            common.current
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main content whiteBackground"
    >
      <div
        class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
        style="width: 100%; height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main error"
          style="align-items: center; width: 500px;"
        >
          <span
            class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
            icon="error"
          >
            <svg
              data-icon="error"
              height="32"
              viewBox="0 0 20 20"
              width="32"
            >
              <desc>
                error
              </desc>
              <path
                d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
          >
            mockError
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Retry
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main metricsPagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
    >
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
      >
        0
         of 
        0
      </span>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
            icon="arrow-left"
          >
            <svg
              data-icon="arrow-left"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                arrow-left
              </desc>
              <path
                d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Prev
          </span>
        </button>
        <button
          class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Next
          </span>
          <span
            class="bp3-icon bp3-icon-arrow-right StyledProps--main"
            icon="arrow-right"
          >
            <svg
              data-icon="arrow-right"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                arrow-right
              </desc>
              <path
                d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <span>
        Showing 5 per page
      </span>
    </div>
  </div>
</div>
`;

exports[`Unit tests for Deployment metrics  Ensure no data state is rendered 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main filters"
    >
      <span
        class="bp3-icon bp3-icon-filter StyledProps--main"
        icon="filter"
      >
        <svg
          data-icon="filter"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            filter
          </desc>
          <path
            d="M13.99.99h-12a1.003 1.003 0 00-.71 1.71l4.71 4.71V14a1.003 1.003 0 001.71.71l2-2c.18-.18.29-.43.29-.71V7.41L14.7 2.7a1.003 1.003 0 00-.71-1.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="transaction_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                rbac.group: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="node_name_filter"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.nodesLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="bp3-popover-wrapper MultiSelectDropDown--main filterDropdown"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--minWidth StyledProps--flex"
            data-testid="HealthSource_MultiSelect_DropDown"
            style="min-width: 130px;"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
            >
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                data-testid="dropdown-value"
                style="--text-line-clamp: 1;"
              >
                pipeline.verification.healthSourceLabel: all
              </p>
            </div>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <label
        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
      >
        <input
          data-testid="anomalousFilterCheckbox"
          type="checkbox"
        />
        <span
          class="bp3-control-indicator"
        />
        pipeline.verification.anomalousMetricsFilterLabel
      </label>
    </div>
    <div
      class="Layout--horizontal StyledProps--main filterSecondRow StyledProps--border StyledProps--border-bottom"
    >
      <div
        class="StyledProps--font StyledProps--main accordionToggleButtons"
      />
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main legend"
        >
          <span
            class="predicted"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
             
            connectors.cdng.baseline
          </p>
          <span
            class="actualFail"
          />
          <span
            class="actualWarning"
          />
          <span
            class="actualObserve"
          />
          <span
            class="actualHealthy"
          />
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
          >
            common.current
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main content whiteBackground"
    >
      <div
        class="StyledProps--font StyledProps--main noData"
      >
        <div
          class="StyledProps--font StyledProps--main NoDataCard--noDataCard StyledProps--flex StyledProps--flex-align-center-center"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
            style="align-items: center; margin-top: -48px; width: 470px;"
          >
            <img
              src="test-file-stub"
            />
            <p
              class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
            >
              cv.monitoredServices.noMatchingData
            </p>
            <div
              class="NoDataCard--buttonContainer"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main metricsPagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
    >
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
      >
        0
         of 
        0
      </span>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
            icon="arrow-left"
          >
            <svg
              data-icon="arrow-left"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                arrow-left
              </desc>
              <path
                d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Prev
          </span>
        </button>
        <button
          class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Next
          </span>
          <span
            class="bp3-icon bp3-icon-arrow-right StyledProps--main"
            icon="arrow-right"
          >
            <svg
              data-icon="arrow-right"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                arrow-right
              </desc>
              <path
                d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <span>
        Showing 5 per page
      </span>
    </div>
  </div>
</div>
`;
